hass/03-hass-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "11"
  labels:
    app: hass
  name: hass
  namespace: hass
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hass
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-04-24T10:21:21.476Z"
      labels:
        app: hass
    spec:
      containers:
      - env:
        - name: TZ
          value: Europe/Moscow
        image: ghcr.io/home-assistant/home-assistant:stable
        imagePullPolicy: IfNotPresent
        name: hass
        ports:
        - containerPort: 8123
          protocol: TCP
        resources:
          limits:
            cpu: "4"
            memory: 3096Mi
          requests:
            cpu: "1"
            memory: 1Gi
        securityContext:
          privileged: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: hass-config-storage
        - mountPath: /run/dbus
          name: d-bus
        - mountPath: /dev/ttyZIGBEE
          name: zigbee
      dnsPolicy: ClusterFirst
      nodeName: htpc.local
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: hass-config-storage
        persistentVolumeClaim:
          claimName: hass-config-pvc
      - hostPath:
          path: /run/dbus
          type: ""
        name: d-bus
      - hostPath:
          path: /dev/ttyZIGBEE
          type: ""
        name: zigbee
