hass/04-hass-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hass
  name: hass
  namespace: hass
spec:
  clusterIP: 10.43.120.96
  clusterIPs:
  - 10.43.120.96
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8123
  selector:
    app: hass
